--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -6000,22 +6000,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PZy-kB-8oh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9216.7999999999993" y="-595.05247376311854"/>
-        </scene>
-        <!--Expense ClaimVC-->
-        <scene sceneID="33a-ge-QYT">
-            <objects>
-                <viewController storyboardIdentifier="ExpenseClaimVC" wantsFullScreenLayout="YES" modalPresentationStyle="fullScreen" id="5gb-rk-yw8" customClass="ExpenseClaimVC" customModule="Facetek" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="N6t-ok-TTs">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="blg-Ik-8s0"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mBh-5z-1Ju" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="9850" y="-595"/>
+            <point key="canvasLocation" x="9162" y="-591"/>
         </scene>
         <!--My Team Google MapVC-->
         <scene sceneID="qkN-UF-0mV">
@@ -6746,6 +6731,130 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="02v-QH-N8M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2368.8000000000002" y="89.505247376311857"/>
+        </scene>
+        <!--Expense ClaimVC-->
+        <scene sceneID="wbn-tN-0tn">
+            <objects>
+                <viewController storyboardIdentifier="ExpenseClaimVC" modalPresentationStyle="fullScreen" id="X5X-MY-zBe" customClass="ExpenseClaimVC" customModule="Facetek" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Xgi-Jm-lrx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZH-lO-6my">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expense Claim" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzF-6c-F9g">
+                                        <rect key="frame" x="71" y="10" width="175" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="8sG-vL-zxR"/>
+                                            <constraint firstAttribute="width" constant="175" id="8wT-Xo-TcV"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CWo-rf-9dg">
+                                        <rect key="frame" x="13" y="10" width="15" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="bVh-ei-6b7"/>
+                                            <constraint firstAttribute="width" constant="15" id="tjR-8w-fna"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="backicon.png"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.054901960780000002" green="0.29803921570000003" blue="0.5450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="bzF-6c-F9g" firstAttribute="leading" secondItem="CWo-rf-9dg" secondAttribute="trailing" constant="43" id="B69-hU-QIM"/>
+                                    <constraint firstAttribute="height" constant="50" id="Rt2-Fz-Ys0"/>
+                                    <constraint firstItem="CWo-rf-9dg" firstAttribute="leading" secondItem="XZH-lO-6my" secondAttribute="leading" constant="13" id="mPa-Ra-Y5r"/>
+                                    <constraint firstItem="bzF-6c-F9g" firstAttribute="top" secondItem="XZH-lO-6my" secondAttribute="top" constant="10" id="uEs-D4-Whs"/>
+                                    <constraint firstItem="CWo-rf-9dg" firstAttribute="top" secondItem="XZH-lO-6my" secondAttribute="top" constant="10" id="y9m-aU-9aZ"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qc6-MJ-881">
+                                <rect key="frame" x="13" y="60" width="350" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oct 2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tLY-ps-oLS">
+                                        <rect key="frame" x="8" y="8" width="250" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="17o-A3-deY"/>
+                                            <constraint firstAttribute="height" constant="30" id="f97-H6-OVj"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lrI-65-ZRL">
+                                        <rect key="frame" x="322" y="15" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="I80-Zw-HeE"/>
+                                            <constraint firstAttribute="width" constant="20" id="Qe0-N9-3kg"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="BottomArrow.png"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="tLY-ps-oLS" firstAttribute="top" secondItem="qc6-MJ-881" secondAttribute="top" constant="8" id="3es-HP-MFO"/>
+                                    <constraint firstItem="lrI-65-ZRL" firstAttribute="top" secondItem="qc6-MJ-881" secondAttribute="top" constant="15" id="9Kd-Ji-jsM"/>
+                                    <constraint firstItem="tLY-ps-oLS" firstAttribute="leading" secondItem="qc6-MJ-881" secondAttribute="leading" constant="8" id="E0j-7B-XYa"/>
+                                    <constraint firstAttribute="trailing" secondItem="lrI-65-ZRL" secondAttribute="trailing" constant="8" id="V9n-el-GyY"/>
+                                    <constraint firstAttribute="height" constant="50" id="woR-dG-ry9"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vat-uX-Ow9">
+                                <rect key="frame" x="0.0" y="117" width="375" height="280"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_leves_found.png" translatesAutoresizingMaskIntoConstraints="NO" id="uRA-fo-51G">
+                                        <rect key="frame" x="38" y="13" width="300" height="175"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="175" id="ytT-vQ-OKk"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data Found" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t05-Qg-jB2">
+                                        <rect key="frame" x="0.0" y="210" width="375" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Z9k-IQ-seJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="280" id="FgH-0w-fSz"/>
+                                    <constraint firstAttribute="trailing" secondItem="uRA-fo-51G" secondAttribute="trailing" constant="37" id="MQK-NS-OlT"/>
+                                    <constraint firstItem="t05-Qg-jB2" firstAttribute="top" secondItem="uRA-fo-51G" secondAttribute="bottom" constant="22" id="QqQ-xE-0ZV"/>
+                                    <constraint firstItem="t05-Qg-jB2" firstAttribute="leading" secondItem="vat-uX-Ow9" secondAttribute="leading" id="Z9N-eP-LH6"/>
+                                    <constraint firstAttribute="trailing" secondItem="t05-Qg-jB2" secondAttribute="trailing" id="amu-b3-Hfz"/>
+                                    <constraint firstItem="uRA-fo-51G" firstAttribute="leading" secondItem="vat-uX-Ow9" secondAttribute="leading" constant="38" id="tO3-he-XYf"/>
+                                    <constraint firstItem="uRA-fo-51G" firstAttribute="top" secondItem="vat-uX-Ow9" secondAttribute="top" constant="13" id="uH2-0e-ldD"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jfc-pk-CSI" firstAttribute="trailing" secondItem="qc6-MJ-881" secondAttribute="trailing" constant="12" id="46c-uT-DH7"/>
+                            <constraint firstItem="vat-uX-Ow9" firstAttribute="top" secondItem="qc6-MJ-881" secondAttribute="bottom" constant="7" id="BJ5-uC-FAx"/>
+                            <constraint firstItem="XZH-lO-6my" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" id="HSE-0u-ahl"/>
+                            <constraint firstItem="XZH-lO-6my" firstAttribute="top" secondItem="jfc-pk-CSI" secondAttribute="top" id="KiI-88-R9V"/>
+                            <constraint firstItem="vat-uX-Ow9" firstAttribute="trailing" secondItem="jfc-pk-CSI" secondAttribute="trailing" id="Oyd-yE-QgP"/>
+                            <constraint firstItem="XZH-lO-6my" firstAttribute="trailing" secondItem="jfc-pk-CSI" secondAttribute="trailing" id="RrH-gN-sZ2"/>
+                            <constraint firstItem="qc6-MJ-881" firstAttribute="top" secondItem="XZH-lO-6my" secondAttribute="bottom" constant="10" id="SaR-GM-2pB"/>
+                            <constraint firstItem="vat-uX-Ow9" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" id="jZB-Hv-7Lp"/>
+                            <constraint firstItem="qc6-MJ-881" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" constant="13" id="xck-1A-dFd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="jfc-pk-CSI"/>
+                    </view>
+                    <size key="freeformSize" width="375" height="667"/>
+                    <connections>
+                        <outlet property="DateView" destination="qc6-MJ-881" id="FDM-MQ-usN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2di-uA-kQr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="9822" y="-591"/>
         </scene>
     </scenes>
     <resources>
