--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -6832,16 +6832,26 @@
                                     <constraint firstItem="uRA-fo-51G" firstAttribute="top" secondItem="vat-uX-Ow9" secondAttribute="top" constant="13" id="uH2-0e-ldD"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bNi-Cr-F8V">
+                                <rect key="frame" x="298" y="568" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="3oy-bK-VCL"/>
+                                    <constraint firstAttribute="height" constant="50" id="Qm9-qF-EJw"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="Bluecircleimg.png"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="jfc-pk-CSI" firstAttribute="trailing" secondItem="qc6-MJ-881" secondAttribute="trailing" constant="12" id="46c-uT-DH7"/>
                             <constraint firstItem="vat-uX-Ow9" firstAttribute="top" secondItem="qc6-MJ-881" secondAttribute="bottom" constant="7" id="BJ5-uC-FAx"/>
+                            <constraint firstItem="jfc-pk-CSI" firstAttribute="trailing" secondItem="bNi-Cr-F8V" secondAttribute="trailing" constant="27" id="DpI-Py-xXb"/>
                             <constraint firstItem="XZH-lO-6my" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" id="HSE-0u-ahl"/>
                             <constraint firstItem="XZH-lO-6my" firstAttribute="top" secondItem="jfc-pk-CSI" secondAttribute="top" id="KiI-88-R9V"/>
                             <constraint firstItem="vat-uX-Ow9" firstAttribute="trailing" secondItem="jfc-pk-CSI" secondAttribute="trailing" id="Oyd-yE-QgP"/>
                             <constraint firstItem="XZH-lO-6my" firstAttribute="trailing" secondItem="jfc-pk-CSI" secondAttribute="trailing" id="RrH-gN-sZ2"/>
                             <constraint firstItem="qc6-MJ-881" firstAttribute="top" secondItem="XZH-lO-6my" secondAttribute="bottom" constant="10" id="SaR-GM-2pB"/>
+                            <constraint firstItem="bNi-Cr-F8V" firstAttribute="top" secondItem="vat-uX-Ow9" secondAttribute="bottom" constant="171" id="ToU-ez-JNd"/>
                             <constraint firstItem="vat-uX-Ow9" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" id="jZB-Hv-7Lp"/>
                             <constraint firstItem="qc6-MJ-881" firstAttribute="leading" secondItem="jfc-pk-CSI" secondAttribute="leading" constant="13" id="xck-1A-dFd"/>
                         </constraints>
@@ -6859,6 +6869,7 @@
     </scenes>
     <resources>
         <image name="Absent1.png" width="200" height="200"/>
+        <image name="Bluecircleimg.png" width="36" height="36"/>
         <image name="BottomArrow.png" width="18" height="18"/>
         <image name="Cancelimage.png" width="128" height="128"/>
         <image name="EarlyLeavers.png" width="36" height="36"/>
